fix for about me on safari

--- a/_sass/modules/services.scss
+++ b/_sass/modules/services.scss
@@ -18,7 +18,6 @@
 	}
 	em {
 		color: $black;
-		font-style: normal;
 		font-weight: bold;
 	}
 	a {
